[gd_scene load_steps=2 format=3 uid="uid://cdb8xqbui6vt4"]

[ext_resource type="Script" path="res://addons/popochiu/editor/dialogue_graph/nodes/condition_node.gd" id="1_16iww"]

[node name="ConditionNode" type="GraphNode"]
custom_minimum_size = Vector2(60, 60)
offset_right = 186.0
offset_bottom = 205.0
size_flags_horizontal = 0
size_flags_vertical = 0
resizable = true
title = "ConditionNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0, 1, 0, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 0, 0, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_16iww")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="Value1" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="Operator" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
item_count = 6
selected = 0
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = "!="
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = "<"
popup/item_3/id = 3
popup/item_4/text = ">="
popup/item_4/id = 4
popup/item_5/text = "<="
popup/item_5/id = 5

[node name="Value2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TrueLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "True"
horizontal_alignment = 2

[node name="FalseLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "False
"
horizontal_alignment = 2

[connection signal="item_selected" from="VBoxContainer/Value1" to="." method="_on_value_1_item_selected"]
[connection signal="pressed" from="VBoxContainer/Value1" to="." method="_on_value_1_pressed"]
